[refactor] Fix chat 'Your Name' input field to be consistent with rest of chat

--- a/AWS_Website/www_static/chat.html
+++ b/AWS_Website/www_static/chat.html
@@ -16,7 +16,7 @@
       <p>Please enter your name below and click 'Join' or hit the 'Enter' key.</p>
         <form class="form-inline" id="nameForm">
           <div class="form-group">
-            <input type="text" class="form-control input-lg" placeholder="Your name" id="name">
+            <input type="text" class="form-control input-lg commentsInput" placeholder="Your name" id="name">
           </div>
           <input type="submit" name="join" id="join" value="Join" class="btn btn-primary btn-lg">
         </form>
