--- a/AWS_Website/www_static/my.html
+++ b/AWS_Website/www_static/my.html
@@ -56,6 +56,7 @@
         <header id="header">
           <nav id="nav">
               <ul id="navigation" class="clearfix">
+                <li><a href="/" class='menuLink' id='menuAbout'>Home</a></li>
                 <li><a href="/" class='menuLink' id='menuAbout'>Upload</a></li>
                 <li><a href="/#one" class='menuLink' id='menuAbout'>About</a></li>
                 <li><a href="/#four" class='menuLink' id='menuContact'>Contact</a></li>
