--- a/AWS_Website/www_static/signup.html
+++ b/AWS_Website/www_static/signup.html
@@ -57,11 +57,11 @@
                         <input type="password" class="form-control" name="password" placeholder="Password">
                     </div>
 
-                    <div class="checkbox">
+                    <!--div class="checkbox">
                         <label>
                           <input type="checkbox"> You are agreeing to the <a href="#">Terms of Service</a> and <a href="#">the&nbsp;Privacy Policy</a>.
                         </label>
-                    </div>
+                    </div-->
                     <input type="submit" value="Create Account" class="btn btn-default"/>
                 </form>
             </div>
@@ -69,6 +69,7 @@
         <header id="header">
           <nav id="nav">
               <ul id="navigation" class="clearfix">
+                <li><a href="/" class='menuLink' id='menuAbout'>Home</a></li>
                 <li><a href="/" class='menuLink' id='menuAbout'>Upload</a></li>
                 <li><a href="/#one" class='menuLink' id='menuAbout'>About</a></li>
                 <li><a href="/#four" class='menuLink' id='menuContact'>Contact</a></li>
