--- a/AWS_Website/www_static/signup.html
+++ b/AWS_Website/www_static/signup.html
@@ -74,10 +74,11 @@
                 <li><a href="/#one" class='menuLink' id='menuAbout'>About</a></li>
                 <li><a href="/#four" class='menuLink' id='menuContact'>Contact</a></li>
                 <% if (!user) { %>
+				<li><a href="/my.html" data-index="three" class="">My presentations</a></li>
                 <li><a href="signin.html" data-index="three" class="">Sign in</a></li>
                 <li><a href="signup.html" data-index="four" class="">Sign up</a></li>
                 <% } else { %>
-                <li><a href="/my.html" data-index="three" class=""> Hello, <%= user.email %></a></li>
+				<li><a href="/my.html" data-index="three" class="">My presentations</a></li>
                 <li><a href="/logout" data-index="three" class="">Sign out</a></li>
                 <% } %>
               </ul>
