--- a/AWS_Website/www_static/index.html
+++ b/AWS_Website/www_static/index.html
@@ -95,12 +95,12 @@
                 <li><a href="#three" data-index="three" class="menuLink">Company</a></li>
                 <li><a href="#four" data-index="four" class="menuLink">Contact</a></li>
                     <% if (!user) { %>
-						<li><a href="/my.html" data-index="three" class="">My presentations</a></li>
-                    	<li><a href="signin.html" data-index="three" class="">Sign in</a></li>
-						<li><a href="signup.html" data-index="four" class="">Sign up</a></li>
+						<li><a href="/my.html" class="menuLinkNoScroll">My presentations</a></li>
+                    	<li><a href="signin.html" class="menuLinkNoScroll">Sign in</a></li>
+						<li><a href="signup.html" class="menuLinkNoScroll">Sign up</a></li>
                     <% } else { %>
-			<li><a href="/my.html" data-index="three" class="">My presentations</a></li>
-			<li><a href="/logout" data-index="three" class="">Sign out</a></li>
+			<li><a href="/my.html" data-index="three" class="menuLinkNoScroll">My presentations</a></li>
+			<li><a href="/logout" data-index="three" class="menuLinkNoScroll">Sign out</a></li>
                     <% } %>
             </ul>
         </nav>
