--- a/AWS_Website/www_static/signup.html
+++ b/AWS_Website/www_static/signup.html
@@ -74,12 +74,12 @@
                 <li><a href="/#one" class='menuLink' id='menuAbout'>About</a></li>
                 <li><a href="/#four" class='menuLink' id='menuContact'>Contact</a></li>
                 <% if (!user) { %>
-				<li><a href="/my.html" data-index="three" class="">My presentations</a></li>
-                <li><a href="signin.html" data-index="three" class="">Sign in</a></li>
-                <li><a href="signup.html" data-index="four" class="">Sign up</a></li>
+				<li><a href="/my.html" data-index="three" class="menuLink">My presentations</a></li>
+                <li><a href="signin.html" data-index="three" class="menuLink">Sign in</a></li>
+                <li><a href="signup.html" data-index="four" class="menuLink">Sign up</a></li>
                 <% } else { %>
-				<li><a href="/my.html" data-index="three" class="">My presentations</a></li>
-                <li><a href="/logout" data-index="three" class="">Sign out</a></li>
+				<li><a href="/my.html" data-index="three" class="menuLink">My presentations</a></li>
+                <li><a href="/logout" data-index="three" class="menuLink">Sign out</a></li>
                 <% } %>
               </ul>
           </nav>
