--- a/AWS_Website/www_static/my.html
+++ b/AWS_Website/www_static/my.html
@@ -6,7 +6,7 @@
     <head>
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <title>Slite - web presentation software</title>
+      <title>Web presentation software</title>
       <meta name="description" content="">
       <meta name="viewport" content="width=device-width, initial-scale=1">
 
