--- a/AWS_Website/www_static/signin.html
+++ b/AWS_Website/www_static/signin.html
@@ -3,30 +3,39 @@
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Slite - web presentation software</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+   <head>
+      <meta charset="utf-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <title>Web presentation software</title>
+      <meta name="description" content="">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-        <link rel="icon" href="favicon.ico" type="image/x-icon">
+      <script src="js/jquery-2.1.3.min.js"></script>
+      <script src="js/jquery.scrolly.min.js"></script>
+      <script src="js/jquery.dropotron.min.js"></script>
+      <script src="js/jquery.scrollex.min.js"></script>
+      <script src="js/skel.min.js"></script>
+      <script src="js/skel-layers.min.js"></script>
+      <script src="js/init.js"></script>
+      <script src="js/jquery-ui.min.js"></script>
+      <script src="js/bootstrap.js"></script>
+      <script src="/socket.io/socket.io.js"></script>
+      <script src="js/client.js"></script>
+      <script src="js/main.js"></script>
+      <script src="js/jquery.scrollTo.js"></script>
 
-        <link rel="stylesheet" href="css/bootstrap.css">
-        <link rel="stylesheet" href="css/screen.css">
-        <link rel="stylesheet" href="css/style.css" />
 
-        <!-- font -->
-        <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
-        <!-- font icons -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-        <!-- javascript -->
-        <script src="/socket.io/socket.io.js"></script>
-        <script src="js/jquery-2.1.3.min.js"></script>
-        <script src="js/bootstrap.js"></script>
-        <script src="js/main.js"></script>
+      <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+      <link rel="icon" href="favicon.ico" type="image/x-icon">
 
+      <link rel="stylesheet" href="css/bootstrap.css">
+      <link rel="stylesheet" href="css/screen.css">
+      <link rel="stylesheet" href="css/style.css" />
+
+       <!-- font -->
+      <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+      <!-- font icons -->
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
     </head>
     <!-- style='background-image: url(img/Slite_Background.jpg);' -->
