--- a/AWS_Website/www_static/signup.html
+++ b/AWS_Website/www_static/signup.html
@@ -47,8 +47,10 @@
               		   <%  if (error == 2) { %>
               				<h4 style="color: #FF0000">Email <i><%= request.param('email') %></i> has already registered. Please try another one.</h4>
               		   <%   } else if (error == 3) { %>
+              				<h4 style="color: #FF0000">Wrong email address</h4>
+						<%   } else if (error == 4) { %>
               				<h4 style="color: #FF0000">DB error. Contact us, please.</h4>
-              		   <%   } else if (error == 4) { %>
+              		   <%   } else if (error == 5) { %>
               				<h4 style="color: #FF0000">Password does not match the confirm password.</h4>
               		   <%   } else if (request.param("NO_DATA") == 1) { %>
               				<h4 style="color: #FF0000">Please fill out the registration form.</h4>
