--- a/AWS_Website/www_static/my.html
+++ b/AWS_Website/www_static/my.html
@@ -64,7 +64,7 @@
                 <li><a href="signin.html" data-index="three" class="">Sign in</a></li>
                 <li><a href="signup.html" data-index="four" class="">Sign up</a></li>
                 <% } else { %>
-                <li><a href="/my.html" data-index="three" class=""> Hello, <%= user.email %></a></li>
+                <li><a href="/my.html" data-index="three" class="">My presentations</a></li>
                 <li><a href="/logout" data-index="three" class="">Sign out</a></li>
                 <% } %>
               </ul>
