--- a/AWS_Website/www_static/subscription.html
+++ b/AWS_Website/www_static/subscription.html
@@ -48,8 +48,11 @@
 					You can use PREZERA absolutely for free!<br>
 					You don't need to register, if you use only one laptop.<br>
 					Keep your data safe in the cloud!<br>
-					You can upload up to <b>3</b> slides and <b>10mb</b>.<br>
-					You can also buy a custom name for your slide only for 99c!
+					You're allowed to upload up to <b>3</b> slides and <b>10mb</b> and you can also buy a custom name for your slide only for 99c!<br>
+					<% if (userRole > 0) { %>
+						<input type="button" value="Downgrade to Basic" class="btn btn-default"/ onclick="location='/downgrade.html?plan=0'">
+					<% } %>
+
 					</td>
 					</tr>
 					<tr>
@@ -61,7 +64,7 @@
 						<input type="button" value="Register" class="btn btn-default"/ onclick="location='/signup.html?SUBSCRIBE=1'">
 					<% } else { %>
 						<% if (userRole == 2) { %>
-							<!--input type="button" value="Downgrade to this plan" class="btn btn-default"/ onclick="location='/downgrade.html?plan=1'"-->
+							<input type="button" value="Downgrade to Silver" class="btn btn-default"/ onclick="location='/downgrade.html?plan=1'">
 						<% } else if (userRole == 1)  { %>
 							Your current plan!
 						<% } else { %>
@@ -73,7 +76,7 @@
 							<input type="hidden" name="os0" value="Silver">
 							<input type="hidden" name="os1" value="<%= user.id %>">
 							<img alt="" border="0" src="https://www.sandbox.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1">
-							<input type="submit" value="Upgrade" class="btn btn-default">
+							<input type="submit" value="Buy Silver plan" class="btn btn-default">
 							</form>
 						<% } %>
 					<% } %>
@@ -88,6 +91,17 @@
 					<% } else { %>
 						<% if (userRole == 2) { %>
 							Your current plan!
+						<% } else if (userRole == 1) { %>
+							<form action="https://www.sandbox.paypal.com/cgi-bin/webscr" method="post" target="_top" style="margin: 0px">
+							<input type="hidden" name="cmd" value="_s-xclick">
+							<input type="hidden" name="hosted_button_id" value="UYUFTGR7GMX54">
+							<input type="hidden" name="on0" value="Account">
+							<input type="hidden" name="on1" value="UserId">
+							<input type="hidden" name="os0" value="Gold">
+							<input type="hidden" name="os1" value="<%= user.id %>">
+							<img alt="" border="0" src="https://www.sandbox.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1">
+							<input type="submit" value="Upgrade from Silver to Gold - 5$" class="btn btn-default">
+							</form>
 						<% } else { %>
 							<form action="https://www.sandbox.paypal.com/cgi-bin/webscr" method="post" target="_top" style="margin: 0px">
 							<input type="hidden" name="cmd" value="_s-xclick">
@@ -97,7 +111,7 @@
 							<input type="hidden" name="os0" value="Gold">
 							<input type="hidden" name="os1" value="<%= user.id %>">
 							<img alt="" border="0" src="https://www.sandbox.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1">
-							<input type="submit" value="Upgrade" class="btn btn-default">
+							<input type="submit" value="Buy Silver plan" class="btn btn-default">
 							</form>
 						<% } %>
 					<% } %>	
