--- a/AWS_Website/www_static/index.html
+++ b/AWS_Website/www_static/index.html
@@ -102,7 +102,7 @@
 						<% if (userRole == 0) { %>
 							<li><a href="/subscription.html" data-index="three" class="menuLinkNoScrollRed">Upgrade account</a></li>
 						<% } else { %>
-							<li><a href="/subscription.html" data-index="three" class="menuLinkNoScrollRed">Manage subscription</a></li>
+							<li><a href="/account.html" data-index="three" class="menuLinkNoScrollRed">My account</a></li>
 						<% } %>			
 						<li><a href="/my.html" data-index="three" class="menuLinkNoScroll">My presentations</a></li>
 						<li><a href="/logout" data-index="three" class="menuLinkNoScroll">Sign out</a></li>
