--- a/AWS_Website/www_static/account.html
+++ b/AWS_Website/www_static/account.html
@@ -4,117 +4,68 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
     <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Slite - web presentation software</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+      <meta charset="utf-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <title>Slite - web presentation software</title>
+      <meta name="description" content="">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-        <link rel="icon" href="img/favicon.ico" type="image/x-icon">
+      <script src="js/jquery-2.1.3.min.js"></script>
+      <script src="js/jquery.scrolly.min.js"></script>
+      <script src="js/jquery.dropotron.min.js"></script>
+      <script src="js/jquery.scrollex.min.js"></script>
+      <script src="js/skel.min.js"></script>
+      <script src="js/skel-layers.min.js"></script>
+      <script src="js/init.js"></script>
+      <script src="js/jquery-ui.min.js"></script>
+      <script src="js/bootstrap.js"></script>
+      <script src="/socket.io/socket.io.js"></script>
+      <script src="js/client.js"></script>
+      <script src="js/main.js"></script>
+      <script src="js/jquery.scrollTo.js"></script>
 
-        <link rel="stylesheet" href="css/bootstrap.css">
-        <link rel="stylesheet" href="css/screen.css">
+
+      <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+      <link rel="icon" href="favicon.ico" type="image/x-icon">
+
+      <link rel="stylesheet" href="css/bootstrap.css">
+      <link rel="stylesheet" href="css/screen.css">
+      <link rel="stylesheet" href="css/style.css" />
+
+       <!-- font -->
+      <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+      <!-- font icons -->
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
     </head>
-    <body style='background-image: url(img/Slite_Background.jpg);'>
+    <body>
         <section class="middle">
             <div class="container-fluid">
+                    <h1>My account</h1>
+					<a href="/subscription.html">Manage subscription</a>
+					<table width="100%" border="0">
 
-                <form class="m-form-signin" role="form" action="/account.html" method="post">
-                    <h1>Welcome, <%= user.username %></h1>
-                    <h2>Change your personal account information </h2>
-                    <div class="form-group">
-                        <label for="exampleInputUsername">Username</label>
-                        <input type="text" class="form-control" placeholder=<%= user.username %> name="username">
-                    </div>
-
-                    <div class="form-group">
-                        <label for="exampleInputEmail1">Email address</label>
-                        <input type="email" class="form-control" name="email" placeholder=<%= user.email %>>
-                    </div>
-
-                    <div class="form-group">
-                        <label for="exampleInputPassword1">New password</label>
-                        <input type="password" class="form-control" name="password" placeholder="Password">
-                    </div>
-
-                    <div class="form-group">
-                        <label for="exampleInputConfirmPassword1">Confirm your new password</label>
-                        <input type="password" class="form-control" name="password1" placeholder="Password">
-                    </div>
-
-                    <div class="checkbox">
-                        <label>
-                          <input type="checkbox"> You are agreeing to the <a href="#">Terms of Service</a> and <a href="#">the&nbsp;Privacy Policy</a>.
-                        </label>
-                    </div>
-                    <input type="submit" class="btn btn-default">Update your account</button>
-                </form>
+					</table>
             </div>
         </section>
-
-				<div class="back" href="http://www.slite.us">
- <nav class="navbar navbar-default m-navbar" role="navigation">
-
-                  <div class="container-fluid">
-                      <!-- Brand and toggle get grouped for better mobile display -->
-                      <div class="navbar-header">
-                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                          <span class="sr-only">Toggle navigation</span>
-                          <span class="icon-bar"></span>
-                          <span class="icon-bar"></span>
-                          <span class="icon-bar"></span>
-                        </button>
-                        <a href="/" class="logo"><img src="img/logo.png" width=100px></a>
-                      </div>
-
-                      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" style='z-index: 5'>
-                        <ul class="nav navbar-nav">
-                          <li>
-                              <a href="http://www.slite.us#2" class='menuLink' id='menuAbout'>About</a>
-                          </li>
-                          <li>
-                              <a href="http://www.slite.us#3" class='menuLink' id='menuContact'>Contact</a>
-                          </li>
-                        </ul>
-
-                        <!--<form class="navbar-form navbar-left" role="search">
-                            <div class="form-group">
-                                <div class="input-group">
-                                    <input type="text" class="form-control btn-create" placeholder="Search...">
-                                    <span class="input-group-btn">
-                                        <button class="btn btn-default" type="button"><span class="glyphicon glyphicon-search"></span></button>
-                                    </span>
-                                </div>
-                            </div>
-                        </form>-->
-
-                        <ul class="nav navbar-nav navbar-right">
-                          <li class="link-signin">
-                            <% if (!user) { %>
-                              <a href="signin.html"><span class="glyphicon glyphicon-user"></span> Sign in</a>
-                           <% } else { %>
-                              <a href="/account.html"><span class="glyphicon glyphicon-user"></span> Hello, <%= user.username %>.</a>
-                            <% } %> 
-                          </li>
-                          <li class="link-signin">
-                           <% if (!user) { %> 
-                              <a href="signup.html"><span class="glyphicon glyphicon-user"></span> Sign up</a>
-                           <% } else { %>
-                              <a href="/logout"><span class="glyphicon glyphicon-user"></span> Sign out.</a>
-                            <% } %>
-                          </li>
-                        </ul>
-                      </div><!-- /.navbar-collapse -->
-                  </div><!-- /.container-fluid -->
+				<input type="file" accept="pptx" id="uploadPresentation" style="display: none">
+        <header id="header">
+          <nav id="nav">
+              <ul id="navigation" class="clearfix">
+                <li><a href="/" class='menuLink' id='menuAbout'>Home</a></li>
+                <li><a href="/" class='menuLink' id='menuAbout'>Upload</a></li>
+                <li><a href="/#one" class='menuLink' id='menuAbout'>About</a></li>
+                <li><a href="/#four" class='menuLink' id='menuContact'>Contact</a></li>
+                <li><a href="/my.html" data-index="three" class="">My presentations</a></li>
+                <% if (!user) { %>
+                <li><a href="signin.html" data-index="three" class="">Sign in</a></li>
+                <li><a href="signup.html" data-index="four" class="">Sign up</a></li>
+                <% } else { %>
+                <li><a href="/logout" data-index="three" class="">Sign out</a></li>
+                <% } %>
+              </ul>
           </nav>
-        
-		</div>
-        
-		<script src="js/jquery-2.1.3.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/jquery-2.1.3.min.js"><\/script>')</script>
-        <script src="js/bootstrap.js"></script>
-        <script src="js/main.js"></script>
+        </header>
+
     </body>
 </html>
