--- a/AWS_Website/www_static/my.html
+++ b/AWS_Website/www_static/my.html
@@ -61,10 +61,11 @@
                 <li><a href="/#one" class='menuLink' id='menuAbout'>About</a></li>
                 <li><a href="/#four" class='menuLink' id='menuContact'>Contact</a></li>
                 <% if (!user) { %>
+				<li><a href="/subscription.html" data-index="three" class="menuLinkNoScrollRed">Upgrade account</a></li>
                 <li><a href="signin.html" data-index="three" class="">Sign in</a></li>
                 <li><a href="signup.html" data-index="four" class="">Sign up</a></li>
                 <% } else { %>
-                <li><a href="/my.html" data-index="three" class="">My presentations</a></li>
+                <li><a href="/account.html" data-index="three" class="">My account</a></li>
                 <li><a href="/logout" data-index="three" class="">Sign out</a></li>
                 <% } %>
               </ul>
