--- a/AWS_Website/www_static/A1/index.html
+++ b/AWS_Website/www_static/A1/index.html
@@ -123,9 +123,9 @@
 
 	<div class='renamePresentationOverlay' id='renamePresentationOverlay'>
 		<div class="closevideo" id="closeRenamePresentationOverlay" style='margin-right:30px;'></div>
-		<form action="https://www.paypal.com/cgi-bin/webscr" method="post" id="paypalNewHashForm">
+		<form action="https://www.sandbox.paypal.com/cgi-bin/webscr" method="post" id="paypalNewHashForm">
 		<input type="hidden" name="cmd" value="_s-xclick">
-		<input type="hidden" name="hosted_button_id" value="Q3YT4YLYZB4F4">
+		<input type="hidden" name="hosted_button_id" value="GJZCCMWDQ8YGG">
 		<input type="hidden" name="on0" value="Slide">
 		<input type="hidden" name="on1" value="Url">
 		<input type="hidden" name="os0" value="" id="paypalRenameOn1">
