--- a/AWS_Website/www_static/account.html
+++ b/AWS_Website/www_static/account.html
@@ -23,7 +23,7 @@
       <script src="js/client.js"></script>
       <script src="js/main.js"></script>
       <script src="js/jquery.scrollTo.js"></script>
-	  <% if (userRestrictions.domain == 1) {%>
+	  <% if (userData.restrictions.domain == 1) {%>
 	<script src="js/domain-rename.js"></script>
 	  <% } %>
       <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -45,12 +45,15 @@
                     <h1>My account</h1>
 					<a href="/subscription.html">Manage subscription</a>
 					<table width="100%" border="0">
-					<% if (userRestrictions.domain == 1) {%>
+					<% if (userData.restrictions.domain == 1) {%>
 					<tr>
 					<td>
 					<div id="renameHashDialog" class="m-subscription-center">
+						<% if(userData.domain) { %>
+							<div id="showDomainData" style="display: none" ></div>
+						<% } %>
 						<div style="font-size:22px;">Enter domain name<br>Example: john<br><span style="font-size:16px"></span></div>
-						<input type="text" name="domainNewName" id="domainNewName" size="30" maxlength="30"/> </br>
+						<input type="text" name="domainNewName" id="domainNewName" size="30" maxlength="30" value="<%= userData.domain %>"/>
 						<div id="domainNewNameRes"></div>
 						<input type="button" id="renameDomainButton" value="Set domain name" disabled>
 					</div>
