--- a/AWS_Website/www_static/signin.html
+++ b/AWS_Website/www_static/signin.html
@@ -44,27 +44,28 @@
             <div class="container-fluid">
 
                 <form class="m-form-signin" role="form" action="/signin.html" method="post">
+                <input type="hidden" name="redirect" value="<%= request.headers.referer %>">
                     <h1>Sign In</h1>
 		    <% if (request.query.REG_OK == 1) { %>
 				<h4 style="color: #FF0000">Congrats! You have registered. Enter your password to log in.</h4>
 		    <% } %>
 
-		    <% if (request.query.ERROR_AUTH == 1) { %>
+		    <% if (ERROR_AUTH == 1) { %>
 				<h4 style="color: #FF0000">The email or password is incorrect.</h4>
 		    <% } %>
 
                     <div class="form-group">
                         <label for="Username">Email</label>
-                        <input type="email" class="form-control" name="email" placeholder="Enter email" value="<%= request.query.email %>">
+                        <input type="email" class="form-control" name="email" placeholder="Enter email" value="<%= request.body.email %>">
                     </div>
                     <div class="form-group">
                         <label for="exampleInputPassword1">Password</label> <!--a href="#">(forgot password)</a-->
                         <input type="password" class="form-control" name="password" placeholder="Password">
                     </div> <input type="checkbox">
                     <!--div class="checkbox">
-                       
+
                           <input type="checkbox"> Remember me
-                        
+
                     </div-->
                     <input type="submit" value="Sign In" class="btn btn-default"/>
                 </form>
