emails with slite.us changed to prezera.com

--- a/AWS_Website/www_static/index.html
+++ b/AWS_Website/www_static/index.html
@@ -218,12 +218,12 @@
                     <div class="6u 12u$(small)" style="text-align: center">
                         <span class="icon alt major fa-area-chart"></span>
                         <h3>Business inquiries</h3>
-                        <p>partners@slite.us</p>
+                        <p>partners@prezera.com</p>
                     </div>
                     <div class="6u 12u$(small)" style="text-align: center">
                         <span class="icon alt major fa-comment"></span>
                         <h3>Press</h3>
-                        <p>press@slite.us</p>
+                        <p>press@prezera.com</p>
                     </div>
                 </div>
             </div>
