--- a/MOBILE_REMOTE_CONTROL/prezera/platforms/ios/www/index.html
+++ b/MOBILE_REMOTE_CONTROL/prezera/platforms/ios/www/index.html
@@ -29,10 +29,10 @@
         <!--<div class="UI midRow leftCol" id="notes"  style="display: none">1: Beginning slide, or should I say 'slite'. Get ready to see powerpoint with all the powers of the web.</div>-->
 
         <div style="widht: 100%; height: 100%; text-align: center">
-            <div id="URLBox">prezera.com/<input type="text" id="URLSlides" value="1dcw"></div>
+            <div id="URLBox">prezera.com/<input type="text" id="URLSlides" value="EnterCodeHere"></div>
             <div id="currentSlide" onclick="void(0)" style="height: 65%; width: 80%; display: inline-block;">
                 <div id="overlay"></div>
-                <iframe id="theIframe" class="frame" src="https://www.prezera.com/1dcw" seamless></iframe>
+                <iframe id="theIframe" class="frame" src="https://www.prezera.com/EnterCodeHere" seamless></iframe>
             </div>
         </div>
 
