--- a/AWS_Website/www_static/domain.html
+++ b/AWS_Website/www_static/domain.html
@@ -43,6 +43,17 @@
             <div class="container-fluid">
                     <h1><%= clearDomain %></h1>
 					<table width="500" border="0">
+					<% slides.forEach(function(slide){ %>
+						<tr id="slide_<%= slide.sid %>">
+						<td width="200"><a href="/<%= slide.sid %>"><img src="/<%= slide.sid %>/img0.jpg" width="50%"></a></td>
+						<td><a href="/<%= slide.sid %>"><%= slide.title %></a><br>Uploaded: <%= moment(slide.created).format('MMMM DD, YYYY hh.mm A') %><br>Size: <%= (slide.size/1024/1024).toFixed(2)   %> Mb<br>
+						<% if (owner == 1) { %>
+							Slide URL: https://<%= clearDomain %>&nbsp;/&nbsp;<input type="text" class="renameSlide"	name="sid_<%= slide.sid %>" value="<%= slide.sid %>"><div id="result_<%= slide.sid %>"></div>
+							<a href="#" slideId="<%= slide.sid %>" class="deleteSlide">Delete slide</a>
+						<% } %>
+						</td>
+						</tr>
+					<%  }); %>
 
 					</table>
             </div>
