--- a/AWS_Website/www_static/domain.html
+++ b/AWS_Website/www_static/domain.html
@@ -23,7 +23,9 @@
       <script src="js/client.js"></script>
       <script src="js/main.js"></script>
       <script src="js/jquery.scrollTo.js"></script>
-
+	  <% if (userData.restrictions.domain == 1) {%>
+	<script src="js/slides-rename.js"></script>
+	  <% } %>
 
       <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
       <link rel="icon" href="favicon.ico" type="image/x-icon">
@@ -48,7 +50,7 @@
 						<td width="200"><a href="/<%= slide.sid %>"><img src="/<%= slide.sid %>/img0.jpg" width="50%"></a></td>
 						<td><a href="/<%= slide.sid %>"><%= slide.title %></a><br>Uploaded: <%= moment(slide.created).format('MMMM DD, YYYY hh.mm A') %><br>Size: <%= (slide.size/1024/1024).toFixed(2)   %> Mb<br>
 						<% if (owner == 1) { %>
-							Slide URL: https://<%= clearDomain %>&nbsp;/&nbsp;<input type="text" class="renameSlide"	name="sid_<%= slide.sid %>" value="<%= slide.sid %>"><div id="result_<%= slide.sid %>"></div>
+							Slide URL: https://<%= clearDomain %>&nbsp;/&nbsp;<input type="text" class="renameSlide" id="rsid_<%= slide.sid %>" value="<% if(slide.scid != null) { %><%= slide.scid %><% } else { %><%= slide.sid %><% } %>"><div id="rresult_<%= slide.sid %>"></div>
 							<a href="#" slideId="<%= slide.sid %>" class="deleteSlide">Delete slide</a>
 						<% } %>
 						</td>
