--- a/AWS_Website/www_static/account.html
+++ b/AWS_Website/www_static/account.html
@@ -24,7 +24,7 @@
       <script src="js/main.js"></script>
       <script src="js/jquery.scrollTo.js"></script>
 	  <% if (userData.restrictions.domain == 1) {%>
-	  <script>var protocol = '<%= request.protocol %>';</script>
+	  <script>var protocol = '<%= protocol %>';</script>
 		<script src="js/domain-rename.js"></script>
 	  <% } %>
       <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
