--- a/MOBILE_REMOTE_CONTROL/prezera/platforms/ios/www/index.html
+++ b/MOBILE_REMOTE_CONTROL/prezera/platforms/ios/www/index.html
@@ -17,7 +17,7 @@
                 <script src="./js/thumbs.0.6.0.min.js"></script>
 
                 <script>
-                    var socket = io.connect('http://slite.elasticbeanstalk.com');
+                    var socket = io.connect('https://www.prezera.com');
                     //var socket = io.connect('http://localhost:1337');
                     </script>
 
