Mobile app fixes

--- a/MOBILE_REMOTE_CONTROL/prezera/platforms/ios/www/index.html
+++ b/MOBILE_REMOTE_CONTROL/prezera/platforms/ios/www/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="user-scalable=no" />
             <title>PRESENTATION REMOTE CONTROL</title>
             <link rel="stylesheet" type="text/css" href="./css/index.css">
-                <script src="http://slite.elasticbeanstalk.com/socket.io/socket.io.js"></script>
+                <script src="https://www.prezera.com/socket.io/socket.io.js"></script>
                 <script type="text/javascript" src="cordova.js"></script>
                 <script src="./js/jquery-2.0.3.min.js"></script>
                 <script src="./js/speechRecognizer.js"></script>
@@ -17,8 +17,7 @@
                 <script src="./js/thumbs.0.6.0.min.js"></script>
 
                 <script>
-                    var socket = io.connect('https://www.prezera.com');
-                    //var socket = io.connect('http://localhost:1337');
+                    var socket = io.connect('https://www.prezera.com/');
                     </script>
 
                 </head>
