Removed scrollbars from hash template

--- a/AWS_Website/www_static/A1/index.html
+++ b/AWS_Website/www_static/A1/index.html
@@ -71,7 +71,7 @@
             f.parentNode.insertBefore(j, f);
         })(window, document, 'script', 'dataLayer', 'GTM-NRK9KQ');
     </script> -->
-<!-- End Google Tag Manager --><br>
+<!-- End Google Tag Manager -->
 
 
 	<canvas id="drawCanvas" style="height:100vh; !important" ></canvas>
