next and prev work now, centered buttons

--- a/AWS_Website/www_static/A1/index.html
+++ b/AWS_Website/www_static/A1/index.html
@@ -109,7 +109,7 @@
             <span style="font-size:2em; vertical-align:top; float:right; padding-right:30px; padding-left:10px;">&gt;</span>
             <span style="vertical-align:top; float:right">NEXT</span>
         </div>
-        <span class="UI" id="timeDisplay">start &#8986;</span><br>
+        <!--<span class="UI" id="timeDisplay">start &#8986;</span>--><br>
     </div>
 
 	<div id="personalNotes">
@@ -274,6 +274,8 @@
     <script src="../A1/js/A1.js"></script>
     <script src="../A1/js/notes.js"></script>
     <script src="../A1/js/paypal.js"></script>
+    <script src="../remote/js/browserPicker.js"></script>
+
 
     <!-- end VideoChat Javascript -->
 
