intermediate fix for Draw and Laser buttons

--- a/AWS_Website/www_static/A1/index.html
+++ b/AWS_Website/www_static/A1/index.html
@@ -75,7 +75,9 @@
     </script> -->
 <!-- End Google Tag Manager -->
 
-
+    <div class="UI midRow midCol wrap" id="currentSlide" onclick="void(0)">
+	  <div id="overlay"></div>
+	</div>
 	<canvas id="drawCanvas" style="height:100vh; !important" ></canvas>
 
 
@@ -253,8 +255,6 @@
 
     <script class="rs-file" src="../js/jquery.royalslider.min.js"></script>
     <script src="../js/jquery.infinitescroll.js"></script>
-    <!-- Lev: This script controls the laser dot -->
-    <script defer src="../js/LASER_RECEIVER.js"></script>
 
     <!-- VideoChat Javascript -->
     <script>
@@ -274,8 +274,15 @@
     <script src="../A1/js/A1.js"></script>
     <script src="../A1/js/notes.js"></script>
     <script src="../A1/js/paypal.js"></script>
-    <script src="../remote/js/browserPicker.js"></script>
-
+    <!-- Lev: This script controls the laser dot -->
+    <script defer src="../js/LASER_RECEIVER.js"></script>
+    <!-- remote imported-->
+    <script src="../remote/js/slite.js"></script>
+    <script src="../remote/js/speechRecognizer.js"></script>
+    <script src="../remote/js/volumeButtonControl.js"></script>
+    <script src="../remote/js/shake.js"></script>
+    <script src="../remote/js/notes.js"></script>
+ 
 
     <!-- end VideoChat Javascript -->
 
