--- a/AWS_Website/www_static/A1/webrtc/video-client.html
+++ b/AWS_Website/www_static/A1/webrtc/video-client.html
@@ -9,7 +9,8 @@ video {
 }
 </style>
 <script>
-var socket = io.connect(document.location.hostname + ':' + location.port);
+// DUPLICATE SOCKET
+//var socket = io.connect(document.location.hostname + ':' + location.port);
 
 
 socket.on('sharing-client', function (data) {
