--- a/AWS_Website/www_static/A1/index.html
+++ b/AWS_Website/www_static/A1/index.html
@@ -75,10 +75,10 @@
     </script> -->
 <!-- End Google Tag Manager -->
 
+    <canvas id="drawCanvas" style="height:100vh; !important"></canvas>
     <div class="UI midRow midCol wrap" id="currentSlide" onclick="void(0)">
 	  <div id="overlay"></div>
-	</div>
-	<canvas id="drawCanvas" style="height:100vh; !important" ></canvas>
+ 	</div>
 
 
 	<div id="sliteWatermak" style="height:40px; line-height:40px;">
@@ -224,8 +224,8 @@
 		<ul>
 			<li><a href="#"></a>
 				<ul class="menuSubmenu">
-				  <li><a href="javascript:showRemote()" id="menuRemote">Remote Control (live)</a></li>
-				  <li><a href="javascript:showHideRemote()" id="menuShowHideRemote">Remote Control (new live)</a></li>
+				  <!--<li><a href="javascript:showRemote()" id="menuRemote">Remote Control (live)</a></li>-->
+				  <li><a href="javascript:showHideRemote()" id="menuShowHideRemote"><span id='remoteOpenCloseLabel'></span>Remote Control (live)</a></li>
 				  <li><a href="javascript:showHideComments()" id="menuOpenWallChat"><span id='chatOpenCloseLabel'></span>Chat</a></li>
 				  <li><a href="javascript:showHideVideoChat()" id="menuOpenVideoChat"><span id='videoChatOpenCloseLabel'></span>Live Video</a></li>
 				  <li><a href="javascript:showHidePersonalNotes()" id="menuPersonalNotes"><span id='personalNotesOpenCloseLabel'></span> Personal Notes</a></li>
