Canvas fix to fullscreen

--- a/AWS_Website/www_static/A1/index.html
+++ b/AWS_Website/www_static/A1/index.html
@@ -89,7 +89,7 @@
 
     <div id="redDot"><img src="../img/redDot.png" alt="Laser Pointer"></div>
 
-  	<center>
+  	<!--center-->
       <div id="screensharing" class="rsContainer">
         <h1><div class="closeVideo" id="closescreensharing" style="position: absolute; right: 1%; top: 8%;" title="Close Screen Share">
         </div></h1>
@@ -98,7 +98,7 @@
 
       <div id="video-gallery" class="royalSlider videoGallery rsDefault">
       </div>
-    </center>
+    <!--/center-->
 
     <div class="UI botRow" id="navButtons" style="display: none">
         <div class="UI button button_unpressed" id="prev" style="height:50px; line-height:50px;">
@@ -234,7 +234,7 @@
             <a href="javascript:shareFacebook()"  title="Facebook" class="socialF fa fa-facebook-square fa-lg"></a>
             <a href="javascript:shareTwitter()"  title="Twitter" class="socialT fa fa-twitter-square fa-lg"></a>
           </li>
-            
+
          <!--  <li><a href="javascript:shareFacebook()" id="shareFacebook">Share on Facebook</a></li>
 				  <li><a href="javascript:shareTwitter()" id="shareTwitter">Share on Twitter</a></li> -->
 				  <li><a href="javascript:downloadPresentation()" id="downloadPresentation">Download Presentation</a></li>
@@ -282,7 +282,7 @@
     <script src="../remote/js/volumeButtonControl.js"></script>
     <script src="../remote/js/shake.js"></script>
     <script src="../remote/js/notes.js"></script>
- 
+
 
     <!-- end VideoChat Javascript -->
 
