[Refactor] Optimize images and css files

--- a/AWS_Website/www_static/index.html
+++ b/AWS_Website/www_static/index.html
@@ -12,12 +12,17 @@
     <meta name="author" content="WEBENTATIONS inc.">
     <link rel="canonical" href="https://www.webentations.com" />
 
-    <link rel="stylesheet" href="css/style.css" />
+    <!-- minified css -->
+    <link rel="stylesheet" href="css/min/style-min.css" />
     <link rel="stylesheet" href="css/font-awesome.min.css" />
     <link rel="stylesheet" href="css/jquery-ui.min.css">
-    <link rel="stylesheet" href="js/elastislide/css/elastislide.css" />	
-
     <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="css/min/elastislide.css" /> 
+
+    <!-- normal css -->
+    <!-- <link rel="stylesheet" href="css/style.css" /> -->
+    <!-- <link rel="stylesheet" href="js/elastislide/css/elastislide.css" /> -->
+    <!-- <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>-->    
     <!--<link rel="stylesheet" href="css/bootstrap.css">-->
     <!--<link rel="stylesheet" href="css/base.css">-->
     <!--<link rel="stylesheet" href="css/skel.css" />-->
@@ -25,6 +30,12 @@
     <!--<link rel="stylesheet" href="css/screen.css">-->
     <!--<link rel="stylesheet" href="css/mainPage.css">-->
 
+
+
+    <!-- minified js -->
+
+   
+    <!-- normal js -->
     <!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
     <script src="js/modernizr.js"></script>
 	<script src="js/elastislide/js/modernizr.custom.17475.js"></script>
