[Refactor] Fix css on index page

--- a/AWS_Website/www_static/index.html
+++ b/AWS_Website/www_static/index.html
@@ -21,21 +21,21 @@
 
     <!-- normal css -->
     <!-- <link rel="stylesheet" href="css/style.css" /> -->
-    <!-- <link rel="stylesheet" href="js/elastislide/css/elastislide.css" /> -->
-    <!-- <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>-->    
-    <!--<link rel="stylesheet" href="css/bootstrap.css">-->
-    <!--<link rel="stylesheet" href="css/base.css">-->
-    <!--<link rel="stylesheet" href="css/skel.css" />-->
-    <!--<link rel=" stylesheet" href="css/style-xlarge.css" />-->
-    <!--<link rel="stylesheet" href="css/screen.css">-->
-    <!--<link rel="stylesheet" href="css/mainPage.css">-->
+    <!--<link rel="stylesheet" href="js/elastislide/css/elastislide.css" /> -->
+    <!-- <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>-->
 
 
 
     <!-- minified js -->
 
-   
-    <!-- normal js -->
+    
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="css/skel.css" />
+    <link rel=" stylesheet" href="css/style-xlarge.css" />
+    <link rel="stylesheet" href="css/screen.css">
+    <link rel="stylesheet" href="css/mainPage.css">
+
     <!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
     <script src="js/modernizr.js"></script>
 	<script src="js/elastislide/js/modernizr.custom.17475.js"></script>
