--- a/AWS_Website/www_static/index.html
+++ b/AWS_Website/www_static/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="css/font-awesome.min.css" />
     <link rel="stylesheet" href="css/jquery-ui.min.css">
     <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="css/min/bootstrap.min.css">
     <!-- <link rel="stylesheet" href="css/min/elastislide.css" />  -->
 
     <!-- normal css -->
@@ -24,7 +25,7 @@
     <link rel="stylesheet" href="js/elastislide/css/elastislide.css" /> 
     <!-- <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>-->
 
-    <link rel="stylesheet" href="css/bootstrap.css">
+    <!-- <link rel="stylesheet" href="css/bootstrap.css"> -->
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/skel.css" />
     <link rel=" stylesheet" href="css/style-xlarge.css" />
@@ -34,6 +35,8 @@
 
 
     <!-- minified js -->
+    <script src="js/client.min.js"></script>
+    <script src="js/init.min.js"></script>
 
     
     <!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
@@ -49,7 +52,10 @@
     <script src="js/jquery-ui.min.js"></script>
     <script src="js/bootstrap.js"></script>
     <script src="/socket.io/socket.io.js"></script>
-    <script src="js/client.js"></script>
+    <!--
+        <script src="js/client.js"></script>
+        <script src="js/init.js"></script>
+     -->
     <script src="js/main.js"></script>
     <script src="js/jquery.scrollTo.js"></script>
 	<script src="js/elastislide/js/jquery.elastislide.js"></script>
