--- a/AWS_Website/www_static/A1/webrtc/sharing-presenter.html
+++ b/AWS_Website/www_static/A1/webrtc/sharing-presenter.html
@@ -14,7 +14,7 @@ video {
 </style>
 <script>
 // DUPLICATE SOCKET
-//var socket = io.connect(document.location.hostname + ':' + location.port);
+var socket = io.connect(document.location.hostname + ':' + location.port);
 var MODERATOR_CHANNEL_ID = 'slite'; // channel-id
 var MODERATOR_SESSION_ID = '<%= hash %>-screen';    // room-id
 var MODERATOR_ID         = '<%= userId%>';    // user-id
